--- a/sidebar.css
+++ b/sidebar.css
@@ -36,6 +36,7 @@
     display: none;
     width: 100%;
     height: calc(100% - var(--nav-height));
+    border-right: 0;
   }
 
   #sidebar.show-mobile {
